--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>        
     <meta charset="utf-8" />
-    <title>React Tutorial</title>
+    <title>xmas draw</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <script src="https://npmcdn.com/react@15.3.0/dist/react.js"></script>
     <script src="https://npmcdn.com/react-dom@15.3.0/dist/react-dom.js"></script>
@@ -20,6 +20,6 @@
   <body>
     <div id="content"></div>
     <!-- <script type="text/babel" src="js/main.js"></script> -->
-    <script type="text/javascript" src="js\bundle.js"></script>
+    <script type="text/javascript" src="/js\bundle.js"></script>
   </body>
 </html>
