--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,6 @@
   <body>
     <div id="content"></div>
     <!-- <script type="text/babel" src="js/main.js"></script> -->
-    <script type="text/javascript" src="/js\bundle.js"></script>
+    <script type="text/javascript" src="/js/bundle.js"></script>
   </body>
 </html>
